[package]
name = "reqwest"
version = "0.10.0-alpha.1" # remember to update html_root_url
description = "higher level HTTP client library"
keywords = ["http", "request", "client"]
repository = "https://github.com/seanmonstar/reqwest"
documentation = "https://docs.rs/reqwest"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
categories = ["web-programming::http-client"]
edition = "2018"
autotests = true

[package.metadata.docs.rs]
all-features = true

[features]
cookies = ["cookie_crate", "cookie_store"]

[dependencies]
http = "0.1.15"
log = "0.4"
url = "2.1"
bytes = "0.4"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
http-body = "=0.2.0-alpha.3"
mime_guess = "2.0"
percent-encoding = "2.1"
time = "0.1.42"

# TODO: candidates for optional features

serde = "1.0"
serde_urlencoded = "0.6.1"

## cookies
cookie_crate = { version = "0.12", package = "cookie", optional = true }
cookie_store = { version = "0.10", optional = true }

# wasm

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.28"
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.25"
features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestRedirect",
    "Response",
    "Window",
]

[[example]]
name = "blocking"
path = "examples/blocking.rs"
required-features = ["blocking"]

[[example]]
name = "json_dynamic"
path = "examples/json_dynamic.rs"
required-features = ["json"]

[[example]]
name = "json_typed"
path = "examples/json_typed.rs"
required-features = ["json"]

[[test]]
name = "blocking"
path = "tests/blocking.rs"
required-features = ["blocking"]

[[test]]
name = "cookie"
path = "tests/cookie.rs"
required-features = ["cookies"]

[[test]]
name = "gzip"
path = "tests/gzip.rs"
required-features = ["gzip"]
